[workspace]
resolver = "2"
members = ["programs/*", "cli"]

[workspace.package]
edition = "2021"
version = "0.0.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
anchor-client = "0.30.1"
clap = { version = "3.2.25", features = ["derive", "env"] }
csv = "1.3.0"
serde = "1.0.137"
solana-program = { version = "1.18.21" }
solana-rpc-client = { version = "1.18.21" }
solana-sdk = { version = "1.18.21" }
spl-associated-token-account = "2.2.0"