[workspace]
resolver = "2"
members = ["programs/*", "merkle-verify", "merkle-tree", "cli"]

[workspace.package]
edition = "2021"
version = "0.0.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
anchor-client = "0.31.0"
clap = { version = "3.2.25", features = ["derive", "env"] }
csv = "1.3.0"
serde = "1.0.137"
spl-associated-token-account = "6.0.0"
fast-math = "0.1"
indexmap = "2.1.0"
merkle-verify = { path = "merkle-verify" }
rust_decimal = "1.35.0"
rand = "0.8.5"
serde_derive = "1.0.171"
serde_json = "1.0.102"
thiserror = "1.0.50"
hex = "0.4.3"