[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }

[features]
localnet = ["locker/localnet"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anchor-client = { workspace = true }
clap = { workspace = true }
spl-associated-token-account = { workspace = true }
csv= { workspace = true }
anyhow = "1.0.57"
serde = { workspace = true }
locker = { path = "../programs/locker" }
merkle-tree = { path = "../merkle-tree" }
rand = { workspace = true }