[package]
name = "merkle-tree"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
csv = { workspace = true }
fast-math = { workspace = true }
indexmap = { workspace = true }
merkle-verify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anchor-lang = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
