[package]
name = "locker"
version = "0.3.0"
description = "Created with Anchor"
edition = "2021"
authors = ["andrew <andrew@raccoons.dev>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "locker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localnet = []
staging = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["event-cpi"] }
anchor-spl = { version = "0.30.1", features = ["memo"] }
spl-transfer-hook-interface = "0.5.0"
solana-program = "1.18.21"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
static_assertions = "1.1.0"
num_enum = "0.7.1"

[dev-dependencies]
proptest = "1.2.0"