[package]
name = "locker"
version = "0.5.0"
description = "Created with Anchor"
edition = "2021"
authors = ["andrew <andrew@raccoons.dev>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "locker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
anchor-debug = []
default = []
localnet = []
staging = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi", "init-if-needed"] }
anchor-spl = { workspace = true, features = ["memo"] }
spl-transfer-hook-interface = "0.9.0"
bytemuck = { version = "1.20.0", features = ["derive", "min_const_generics"] }
static_assertions = "1.1.0"
num_enum = "0.7.1"
merkle-verify = { path = "../../merkle-verify" }

[dev-dependencies]
proptest = "1.2.0"